--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,7 +1,7 @@
 name: Cacti
 version: 1.0.0
 description: Minimal theme based on Cactus and Kactus
-icon: empire
+icon: tree
 author:
   name: Team Grav
   email: devs@getgrav.org
