--- a/languages.yaml
+++ b/languages.yaml
@@ -9,6 +9,17 @@ en:
   MONTHS_OF_THE_YEAR: [January, February, March, April, May, June, July, August, September, October, November, December]
   DAYS_OF_THE_WEEK: [Monday, Tuesday, Wednesday, Thursday, Friday, Saturday, Sunday]
 
+el:
+  SITE:
+    TITLE: To blog μου
+    DESCRIPTION: Blogging για την ουσία
+    COPYRIGHT: © Δικαιώματα %s Η εταιρία σας
+  SUBSCRIBE: Εγγραφή
+  TWEET: Tweet
+  SHARE: Κοινοποίηση
+  MONTHS_OF_THE_YEAR: [Ιανουάριος, Φεβρουάριος, Μάρτιος, Απρίλιος, Μάιος, Ιούνιος, Ιούλιος, Αύγουστος, Σεπτέμβριος, Οκτώβριος, Νοέμβριος, Δεκέμβριος]
+  DAYS_OF_THE_WEEK: [Δευτέρα, Τρλιτη, Τετάρτη, Πέμπτη, Παρασκευή, Σαββάτο, Κυριακή]  
+
 es:
   SITE:
     TITLE: Mi Blog
