--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -8,7 +8,7 @@ author:
   url: http://getgrav.org
 homepage: https://github.com/getgrav/grav-theme-cacti
 demo: http://demo.getgrav.org/multilang-skeleton
-keywords: cacti, theme, minimal, modern, fast, responsive, html5, css3
+keywords: cacti, theme, minimal, modern, fast, responsive, html5, css3, multilanguage
 bugs: https://github.com/getgrav/grav-theme-cacti/issues
 license: MIT
 
