remove default for analytics, twitter and facebook
to avoid overwriting of null in admin panel; values are still preset to UA-YOURCODE / '@getgrav' / rockettheme due to cacti.yaml

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -65,7 +65,7 @@ form:
         type: text
         size: medium
         label: Google Analytics Code
-        default: 'UA-YOURCODE'
+        default: null
         validate:
           type: text
 
@@ -73,7 +73,7 @@ form:
         type: text
         size: medium
         label: Twitter
-        default: '@getgrav'
+        default: null
         validate:
           type: text
 
@@ -81,7 +81,7 @@ form:
         type: text
         size: medium
         label: Facebook
-        default: 'rockettheme'
+        default: null
         validate:
           type: text
 
